# RustyOpenAI

./: .gitignore  Cargo.toml  README.md  ThePlan.md
open_ai_lib/: Cargo.toml
open_ai_lib/src/: completions.rs  helper.rs  images.rs  lib.rs  moderation.rs  open_ai.rs  text_to_speech.rs  transctiption.rs
rusty_ai_client/: Cargo.toml
rusty_ai_client/src/: main.rs
rusty_ai_tests/: Cargo.toml
rusty_ai_tests/src/: tests.rs
rusty_open_ai_client/: Cargo.toml
rusty_open_ai_client/src/: main.rs
rusty_open_ai_lib/: Cargo.toml
rusty_open_ai_lib/src/: chat.rs  moderation.ra.rs  moderation.rs  open_ai.rs  text_to_speech.rs
rusty_open_ai_tests/: Cargo.toml
rusty_open_ai_tests/src/: core_tests.rs
src/: Core.rs  core.rs  lib.rs
src/Modules/: Chat.rs  Moderation.rs
