[workspace]
members = [ "rusty_open_ai_*"]
default-members = ["rusty_open_ai_*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.75"
edition = "2021"
authors = [ "Jakub marcickiewicz <marcickiewiczjakub@gmail.com>" ]
homepage = "https://github.com/dealen"
repository = "https://github.com/dealen/RustyOpenAI"
keywords = ["autiomation", "library", "rust"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }