[package]
name = "open_ai_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.114"
package = "0.0.0"
chrono = "0.4.38"
base64 = "0.22.1"