[package]
name = "rusty_open_ai_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_open_ai_tests"
path = "src/core_tests.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusty_open_ai_lib = { path = "../rusty_open_ai_lib" }